Additional updates, code cleanup, routing, setup etc.

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "autoload": {
+        "psr-4": {"BandManager\\": "app/"}
+    },
     "require": {
         "facebook/graph-sdk": "^5.6"
     },
